# wewu-less

./: .dockerignore  .env.ci  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
.github/: wewu_less_cicd.yml
.github/workflows/: wewu_less_cicd.yml
terraform/: cf_template.tf  common.tf  configuration.tf  functions.tf  http_cf_template.tf  http_functions.tf  main.tf  notifier_cloud_tasks.tf  public_iam.tf  pubsub_cf_template.tf  pubsub_functions.tf  queue_template.tf  queues.tf  variables.tf
tests/integration/: conftest.py  mongo.py  utils.py
tests/manual/: stress_test.py  testscenario.py
tests/resources/: mocked_google_credentials.json
tests/unit/: utils.py
wewu_less/: echoer.py  logging.py  utils.py
wewu_less/clients/: email_client.py  sms.py
wewu_less/handlers/: buzzator.py  entry.py  notifier.py  scheduler.py  tester.py
wewu_less/models/: delete_request.py  geo_region.py  job.py  last_notification.py  monitor_result.py  notification.py  ping_result.py  register_request.py  send_notification_event.py  service_admin.py  worker_monitor_task.py
wewu_less/queues/: abstract_queue.py  cloud_task_queue.py  delete_task_queue.py  publisher.py  register_task_queue.py  send_notification_event.py  worker_task_queue.py
wewu_less/repositories/: database.py  job.py  last_notification.py  notification.py  ping_result.py  utils.py
wewu_less/schemas/: delete_request.py  job.py  last_notification.py  monitor_result.py  notification.py  register_request.py  send_notification_event.py  service_admin.py  worker_monitor_task.py
(+8 files in other folders)
